objects/vlocity_ins__CustomFilter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Vlocity Field Map Custom Filter custom setting describes a filter used to query the source object records during the process of cloning one object to another.</description>
    <fields>
        <fullName>vlocity_ins__DestinationSObjectType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Destination SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldName__c</fullName>
        <description>Name of the filter field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the filter field</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldType__c</fullName>
        <description>Field&apos;s type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field&apos;s type</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Index__c</fullName>
        <description>Index of the filter</description>
        <inlineHelpText>Index of the filter</inlineHelpText>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Operator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceSObjectType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Filter</label>
</CustomObject>